# MySDL3Project

./: .gitignore  CMakeLists.txt  create_project.py
doc/: Build และ Install BGFX สำหรับ Visual Studio.md  Build และ Install SDL3SDL3_imageCMakeWindows.md  วิธีการ Build และ Install SDL3 ด้วย CMake.md
lib/SDL_image-install/lib/cmake/SDL3_image/: SDL3_image-shared-targets-relwithdebinfo.cmake
lib/SDL_image-install/lib/pkgconfig/: sdl3-image.pc
lib/bgfx-install/lib/cmake/bgfx/: bgfxConfigVersion.cmake  bgfxTargets-release.cmake  bgfxTargets.cmake
lib/sdl3-install/cmake/: SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake
lib/sdl3-install/include/SDL3/: SDL_revision.h
lib/sdl3-install/lib/: SDL3.lib  SDL3_test.lib
lib/sdl3-install/lib/cmake/SDL3/: SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake
lib/sdl3-install/lib/cmake/SDL3_image/: SDL3_image-shared-targets.cmake  SDL3_imageConfig.cmake
lib/sdl3-install/lib/pkgconfig/: sdl3-image.pc  sdl3.pc
src/: main.cpp
